# bist

./: .gitignore  CMakeLists.txt  README.md  requirements.txt  setup.py
bist/: __init__.py  _paths.py  animate.py  api.py  evaluate.py  metrics.py  utils.py
bist/csrc/: articulation_points.cu  articulation_points.h  atomic_helpers.cu  atomic_helpers.h  bass.cu  bass.h  bass3d.cu  bass3d.h  bist.cu  bist.h  border_edges.cu  border_edges.h  compact_spix.cu  compact_spix.h  compact_spix_3d.cu  compact_spix_3d.h  compact_spix_cub.cu  compact_spix_cub.h  csr_edges.cu  csr_edges.h  demo_utils.cu  extract_edges.cu  extract_edges.h  face_dual.cu  face_dual.h  file_io.h  fill_missing.cu  fill_missing.h  flood_fill.cu  flood_fill.h  graph_coloring.cu  graph_coloring.h  init_seg.cu  init_seg.h  init_seg_3d.cu  init_seg_3d.h  init_sparams.cu  init_sparams.h  init_utils.cu  init_utils.h  (+53 more)
bist/spixconv/: __init__.py  davis.py  model.py  spynet.py
bist/viz/: __init__.py
data/examples/hummingbird/flows/: 00002.flo  00003.flo  00004.flo  00005.flo  00006.flo  00007.flo  00008.flo  00009.flo
data/examples/kid-football/flows/: 00001.flo  00002.flo  00003.flo  00004.flo  00005.flo  00006.flo  00007.flo  00008.flo  00009.flo
dev/: ablate_niters.py  anim_show_seq.py  bit_manip.cu  check_points.py  color_spix.py  crop_em.py  crops_for_split_merge_relabel.py  eval_ablation.py  inspect_split_spix.py  interactive_viewer.py  launch.py  mesh.py  run_eval.py  run_method.py  runtime.py  sparse_voxel_grid_v2.py  test_batched_bass.py  viz_boundary_updates.py  viz_crop_result.py  viz_new_split.py  viz_relabeling.py  viz_spix_attn.py  viz_split.py
scripts/: bist_evaluation.py  bist_experiments.py  example.py  example.sh  example_anim.py  spixconv_test.py  spixconv_train.py
scripts/examples/: run_python.py
